--- a/Project 1 Brian Hamil/Project 1 Brian Hamil/Base.lproj/Main.storyboard
+++ b/Project 1 Brian Hamil/Project 1 Brian Hamil/Base.lproj/Main.storyboard
@@ -33,6 +33,10 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="OptionsButton" destination="PNC-2R-i3K" id="CNK-8K-XyJ"/>
+                        <outlet property="PlayButton" destination="3hi-y4-zTZ" id="N6t-kb-HZE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
