--- a/MatchGame/MatchGame/Base.lproj/Main.storyboard
+++ b/MatchGame/MatchGame/Base.lproj/Main.storyboard
@@ -17,38 +17,13 @@
                     <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="MainView">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-171" y="19"/>
-        </scene>
-        <!--Options View Controller-->
-        <scene sceneID="4ic-xI-tQv">
-            <objects>
-                <viewController id="kOr-mg-vMm" userLabel="Options View Controller" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="s0i-Si-TpE" customClass="OptionsView">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dOL-H3-twd">
-                                <rect key="frame" x="163" y="433" width="89" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="89" id="1OX-Zf-nl9"/>
-                                    <constraint firstAttribute="height" constant="30" id="hZy-vl-YWA"/>
-                                </constraints>
-                                <state key="normal" title="Set Grid Size"/>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="rIR-Rx-HoF"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pNR-6r-s5g" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="929" y="19"/>
         </scene>
     </scenes>
 </document>
